compiler/src/test/resources/amyc/parser/failing/ClassDefError4.amy
object ClassDef
  case class Foo(Int, y: Int(32)) extends Bar
end ClassDef
